# discord_tt

./: docker-compose.yml  nginx.conf
backend/: .dockerignore  .gitignore  Dockerfile  discord_messages.db  fly.toml  pyproject.toml
backend/src/discord_summarizer/: config.py  database.py  discord_api.py  main.py  summarizer.py  sync_manager.py  sync_operations.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  bun.lockb  fly.toml  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: DiscordSummary.tsx
